--- a/view/threeFloat.html
+++ b/view/threeFloat.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>小薇学院——任务三：三栏式布局</title>
+    <title>小薇学院——任务三：三栏式布局：Float</title>
     <style>
         #container{
             padding: 20px;
