--- a/view/xiaowei/Four/index.html
+++ b/view/xiaowei/Four/index.html
@@ -8,9 +8,6 @@
             padding: 0;
             margin: 0;
         }
-        body{
-            height: 100%;
-        }
         #box{
             width: 400px;
             height: 200px;
@@ -40,9 +37,12 @@
     </style>
 </head>
 <body>
-<div id="box">
-    <div class="square sector shanxing1"></div>
-    <div class="square sector shanxing2"></div>
+<div class="container">
+    <div id="box">
+        <div class="square sector shanxing1"></div>
+        <div class="square sector shanxing2"></div>
+    </div>
 </div>
+
 </body>
 </html>
